tests/ast_bad_old_array_type.stderr
tests/ast_bad_old_array_type.sl:3:12: error: SL1007: expected type
