tests/ast_bad_old_array_type.sl
fn main() i32 {
    var x [4]i32
    return 0
}
